# code_generation_agent

./: README.md  demo-terrarium.py  pyproject.toml
code_gen_agent/: agent.py  main.py  terrarium_tool.py
cohere-terrarium/: docker-compose.yml
